[URG] emergency push

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: seozcan <seozcan@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/12/07 19:14:12 by seozcan           #+#    #+#              #
-#    Updated: 2022/09/21 14:42:32 by seozcan          ###   ########.fr        #
+#    Updated: 2022/09/23 16:54:20 by seozcan          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,44 +18,57 @@ NAME	:= libft.a
 
 SDIR	:= srcs
 
-SRCS	:= 	ft_isalpha.c\
-			ft_isdigit.c\
-			ft_isalnum.c\
-			ft_isascii.c\
-			ft_isprint.c\
-			ft_strlen.c\
-			ft_memset.c\
-			ft_bzero.c\
-			ft_memcpy.c\
-			ft_memmove.c\
-			ft_strlcpy.c\
-			ft_strlcat.c\
-			ft_toupper.c\
-			ft_tolower.c\
-			ft_strchr.c\
-			ft_strrchr.c\
-			ft_strncmp.c\
-			ft_memchr.c\
-			ft_memcmp.c\
-			ft_strnstr.c\
-			ft_atoi.c\
-			ft_calloc.c\
-			ft_strdup.c\
-			ft_substr.c\
-			ft_strjoin.c\
-			ft_strtrim.c\
-			ft_split.c\
-			ft_itoa.c\
-			ft_putchar_fd.c\
-			ft_putstr_fd.c\
-			ft_putnbr_fd.c\
-			ft_putendl_fd.c\
-			ft_strmapi.c\
-			ft_strcpy.c \
-			ft_striteri.c\
+SRCS	:= 	ft_allocate_tab.c \
+			ft_atoi.c \
+			ft_atoi_hexa.c \
+			ft_atoli.c \
+			ft_bzero.c \
+			ft_calloc.c \
+			ft_free_stab.c \
+			ft_free_tab.c \
+			ft_isalnum.c \
+			ft_isalpha.c \
+			ft_isascii.c \
+			ft_isdigit.c \
+			ft_isprint.c \
+			ft_itoa.c \
+			ft_lstadd_back.c \
+			ft_lstadd_front.c \
+			ft_lstclear.c \
+			ft_lstdelone.c \
+			ft_lstiter.c \
+			ft_lstlast.c \
+			ft_lstmap.c \
+			ft_lstnew.c \
+			ft_lstsize.c \
+			ft_memchr.c \
+			ft_memcmp.c \
+			ft_memcpy.c \
+			ft_memmove.c \
+			ft_memset.c \
+			ft_putchar_fd.c \
+			ft_putendl_fd.c \
+			ft_putnbr_fd.c \
+			ft_putstr_fd.c \
+			ft_split.c \
+			ft_strchr.c \
 			ft_strcmp.c \
+			ft_strcpy.c \
+			ft_strdup.c \
+			ft_striteri.c \
+			ft_strjoin.c \
+			ft_strlcat.c \
+			ft_strlcpy.c \
+			ft_strlen.c \
+			ft_strmapi.c \
+			ft_strncmp.c \
+			ft_strnstr.c \
+			ft_strrchr.c \
+			ft_strtrim.c \
+			ft_substr.c \
 			ft_tablen.c \
-			ft_free_stab.c
+			ft_tolower.c \
+			ft_toupper.c \
 
 # :::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::OBJECTS::
 
@@ -138,7 +151,7 @@ $(OBJS):		| $(ODIR)
 
 $(ODIR):
 	@mkdir -p $(ODIR)
-	@echo "$(BHIGREEN)libft objs folder:\t\t\t\t\t[OK]$(NO_COLOR)"
+	@echo "$(HIGREEN)libft objs folder:\t\t\t\t\t[OK]$(NO_COLOR)"
 
 clean:
 ifneq ($(wildcard ./$(ODIR)),)
